@@ -414,9 +414,9 @@ sp-synaptic-core-chip=Synaptic core chip
 sp-tantalum-billet=Tantalum billet
 sp-tellurium=Tellurium
 sp-tellurium-hydroxide=Tellurium hydroxide
-sp-tialsn=Tialsn
+sp-TiAlSn=TiAlSn
 sp-tin-ingot=Tin ingot
-sp-tinb=Tinb
+sp-TiNb=TiNb
 sp-tinstone=Tinstone
 sp-titanium-carbide=Titanium carbide
 sp-titanium-chloride=Titanium chloride
@@ -866,11 +866,11 @@ sp-tantalum-billet=Tantalum billet
 sp-tellurium=Tellurium
 sp-tellurium-from-acrovoid=Tellurium from acrovoid
 sp-tellurium-hydroxide=Tellurium hydroxide
-sp-tialsn=Tialsn
+sp-TiAlSn=TiAlSn
 sp-tin-and-lead=Tin and lead
 sp-tin-ingot=Tin ingot
 sp-tin-ingot-from-enriched-tin=Tin ingot from enriched tin
-sp-tinb=Tinb
+sp-TiNb=TiNb
 sp-tinstone-from-acrocrystal=Tinstone from acrocrystal
 sp-titanium-carbide=Titanium carbide
 sp-titanium-chloride=Titanium chloride
@@ -891,7 +891,7 @@ sp-tungsten-ore-from-acrocrystal=Tungsten ore from acrocrystal
 sp-tungsten-powder=Tungsten powder
 sp-tungsten-slab=Tungsten slab
 sp-turbine-blade-from-stainless-steel=Turbine blade from stainless steel
-sp-turbine-blade-from-tialsn=Turbine blade from tialsn
+sp-turbine-blade-from-TiAlSn=Turbine blade from TiAlSn
 sp-turbine-rotor=Turbine rotor
 sp-turbine-stator=Turbine stator
 sp-turbopump=Turbopump
