@@ -1,2 +1,5 @@
-commit_message = input("Enter commit message: ")
-print(commit_message)
+# commit_message = input("Enter commit message: ")
+# print(commit_message)
+
+commit_message = "TiNb"
+print(commit_message.capitalize())
