@@ -5,8 +5,10 @@ Date: 2024-10-13
     - Added wooden board
     - Engineer spawns now with biolab, pipes and offshore pump for easier wood production
     - Support for krastorio custom stack sizes
+    - Space research data is now crushed into rocket control unit, processing unit and electronic components
   Bugfixes:
     - Unlock unlimited ingredient count for krastorio buildings
+    - Locale fixes
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.8
 Date: 2024-10-10
